update (add and update issue function)